website/node_create_test.log
success open and validate gatsby-configs - 0.010s
success load plugins - 0.124s
success onPreInit - 0.032s
success initialize cache - 0.017s
success copy gatsby files - 0.052s
success onPreBootstrap - 0.019s
success createSchemaCustomization - 0.002s
Node created of type "SitePage"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "SitePlugin"

 undefined
Node created of type "Site"

 undefined
Node created of type "SiteBuildMetadata"

 undefined
success Checking for changed pages - 0.001s
success source and transform nodes - 0.099s
success building schema - 0.239s
info Total nodes: 20, SitePage nodes: 1 (use --verbose for breakdown)
success createPages - 0.006s
success Checking for changed pages - 0.004s
Node created of type "SitePage"

 undefined
Node created of type "SitePage"

 undefined
Node created of type "SitePage"

 undefined
Node created of type "SitePage"

 undefined
success createPagesStatefully - 0.080s
success update schema - 0.035s
success write out redirect data - 0.002s
success onPostBootstrap - 0.003s
info bootstrap finished - 3.995s
success onPreExtractQueries - 0.002s
success extract queries from components - 42.387s
success write out requires - 0.018s
success run page queries - 0.033s - 4/4 121.93/s
There was an error requiring "src/html.js"

 Error: Module build failed (from ./node_modules/gatsby/dist/utils/babel-loader.js):
SyntaxError: /Users/brentbailey/Documents/freelance/generative_unfoldings/website/src/html.js: Unexpected token (37:0)

  35 |     </html>
  36 |   )
> 37 | 
     | ^
    at Object._raise (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/error.js:60:45)
    at Object.raiseWithData (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/error.js:55:17)
    at Object.raise (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/error.js:39:17)
    at Object.unexpected (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/util.js:139:16)
    at Object.parseExprAtom (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:1171:20)
    at Object.parseExprAtom (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/plugins/jsx/index.js:535:22)
    at Object.parseExprSubscripts (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:568:23)
    at Object.parseUpdate (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:548:21)
    at Object.parseMaybeUnary (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:532:17)
    at Object.parseExprOps (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:348:23)
    at Object.parseMaybeConditional (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:313:23)
    at Object.parseMaybeAssign (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:268:21)
    at Object.parseExpressionBase (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:188:23)
    at callback (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:181:39)
    at Object.allowInAnd (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:2580:16)
    at Object.parseExpression (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/@babel/parser/src/parser/expression.js:181:17)
    at Object../src/html.js (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:1651:7)
    at __webpack_require__ (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:30:30)
    at Module../.cache/develop-static-entry.js (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:450:10)
    at __webpack_require__ (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:30:30)
    at /Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:94:18
    at /Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:97:10
    at webpackUniversalModuleDefinition (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:3:20)
    at Object.<anonymous> (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/public/render-page.js:10:3)
    at Module._compile (internal/modules/cjs/loader.js:1063:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1092:10)
    at Module.load (internal/modules/cjs/loader.js:928:32)
    at Function.Module._load (internal/modules/cjs/loader.js:769:14)
    at Module.require (internal/modules/cjs/loader.js:952:19)
    at require (internal/modules/cjs/helpers.js:88:18)
    at /Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/gatsby/dist/utils/worker/render-html.js:25:35
    at Promise._execute (/Users/brentbailey/Documents/freelance/generative_unfoldings/website/node_modules/bluebird/js/release/debuggability.js:384:9) 


warn develop process needs to be restarted to apply the changes to gatsby-config.js
